// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecoratedLink snapshots matches snapshot - basic 1`] = `
<a
  className="decorated-link-style"
  href="/test"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
      "--text-color": "#424242",
    }
  }
>
  Test Link
</a>
`;

exports[`DecoratedLink snapshots matches snapshot - disabled 1`] = `
<a
  aria-disabled={true}
  className="decorated-link-style decorated-link-style--disabled"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
      "--text-color": "#424242",
    }
  }
  tabIndex={-1}
>
  Disabled Link
</a>
`;

exports[`DecoratedLink snapshots matches snapshot - with additional props 1`] = `
<a
  className="decorated-link-style"
  data-testid="link"
  href="/test"
  id="test-link"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
      "--text-color": "#424242",
    }
  }
>
  Test Link
</a>
`;

exports[`DecoratedLink snapshots matches snapshot - with className 1`] = `
<a
  className="decorated-link-style custom-class"
  href="/test"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
      "--text-color": "#424242",
    }
  }
>
  Test Link
</a>
`;

exports[`DecoratedLink snapshots matches snapshot - with style 1`] = `
<a
  className="decorated-link-style"
  href="/test"
  onClick={[Function]}
  style={
    Object {
      "--link-color": "#027EB5",
      "--link-hover": "#0064A0",
      "--text-color": "#424242",
      "fontSize": "16px",
    }
  }
>
  Test Link
</a>
`;
